fix(MainLayout): correct z-index for all elements

--- a/src/styles/layouts/_main-layout.scss
+++ b/src/styles/layouts/_main-layout.scss
@@ -1,5 +1,8 @@
 .main-layout {
   &-header {
+    position: relative;
+    z-index: 0;
+
     padding: 65px;
   }
 
@@ -21,6 +24,7 @@
 
   &-content {
     position: relative;
+    z-index: 1;
   }
 
   &-content-bg {
@@ -29,6 +33,7 @@
     top: 0;
     right: 0;
     bottom: 0;
+    z-index: -1;
 
     background: $bg-gradient;
   }
